--- a/src/book.css
+++ b/src/book.css
@@ -1,19 +1,3 @@
-@import-normalize; /* bring in normalize.css styles */
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f7f7f7;
@@ -70,10 +54,8 @@ li {
 
 input[type='text'],
 input[type='tel'] {
-  width: calc(
-    100% - 26px
-  ); /* Dostosuj szerokość, aby uwzględnić padding i margin */
-  box-sizing: border-box; /* Uwzględnia padding i border w szerokości */
+  width: calc(100% - 26px);
+  box-sizing: border-box;
 }
 
 input[type='text']:focus,
